arreglo product details & search

--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -63,7 +63,7 @@
 			  <% visitados.forEach(product => { %>
 				<div class="col-12 col-md-6 col-lg-3">
 					<div class="contenido">
-						<a href="/product/detail/<%=product.id%>">	
+						<a href="/products/detail/<%=product.id%>">	
 							<div>
 								<img src="<%=product.images[0].file%>" alt="Imagen del producto" class="img-fluid">
 								</div>
