--- a/Site/views/admin/productAdd.ejs
+++ b/Site/views/admin/productAdd.ejs
@@ -69,13 +69,13 @@
                                    
                                     <option selected disabled >Elegir Categoria</option> <!--Agregando 'selected' & 'disabled', en la etiqueta '<option' deshabilitamos la opción de que el usuario la seleccione -->
                                         
-                                    <option value="arduino">Arduino</option>
-                                    <option value="modulos">Modulos</option>
-                                    <option value="sensores">Sensores</option>
-                                    <option value="accesorios">Accesorios</option>
-                                    <option value="servos y motores">Servos y Motores</option>
-                                    <option value="led">Led</option>
-                                    <option value="componentes">Componentes</option>
+                                    <option value="1">Arduino</option>
+                                    <option value="2">Modulos</option>
+                                    <option value="3">Sensores</option>
+                                    <option value="4">Accesorios</option>
+                                    <option value="5">Servos y Motores</option>
+                                    <option value="6">Led</option>
+                                    <option value="7">Componentes</option>
                                 </select> 
                             </div>
     
@@ -98,21 +98,7 @@
                             </div>
 
                             
-    
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div>
-                                        <label for="sub-category" class="form-label">Sub-Categoría:</label>
-            
-                                        <select name="sub-category" id="sub-category">
-                                            <option selected disabled >Elegi</option>
-                                            <option value="oferta">Ofertas</option>
-                                            <option value="nuevo">Nuevos</option>
-                                            <option value="promo">Promo</option>
-                                        </select>
-                                    </div>
-                            </div>
-                        </div>
+
     
                             <div class="row" id="botones">
                                 <div class="col-md-12">
