--- a/Site/views/cart.ejs
+++ b/Site/views/cart.ejs
@@ -33,9 +33,9 @@
                 </thead>
 
                 <tr>
-                    <td> Display Led </td>
+                    <td> Intelligent Metal Chips </td>
                     <td> <img src="https://www.cromptonlamps.com/imagecache/dd325c1c-f550-42ff-ae1a-a87a00ed8e8b/3415---LED-G9-25W-2700K_1000x1000.jpg" alt="Product Pic" height="40px" width="40px" /></td>
-                    <td>$ 20.00</td>
+                    <td>$ 99.00</td>
                   <!--   <td>display led de 2.5w</td> -->
 
                     <td><a class="btn btn-danger btn-xs" href="#"><i class="fas fa-trash-alt"></i><span
