--- a/Site/views/productDetails.ejs
+++ b/Site/views/productDetails.ejs
@@ -33,28 +33,28 @@
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
-					<img class="d-block w-100" src="<%=product.images[0].file%> " data-color="lightblue" alt="First Image">
+					<img class="d-block w-100" src="<%=product.image%> " data-color="lightblue" alt="First Image">
 					<div class="carousel-caption d-md-block">
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img class="d-block w-100" src="<%=product.images[0].file%> " data-color="firebrick" alt="Second Image">
+					<img class="d-block w-100" src="<%=product.image%> " data-color="firebrick" alt="Second Image">
 					<div class="carousel-caption d-md-block">
 						
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img class="d-block w-100" src="<%=product.images[0].file%> " data-color="violet" alt="Third Image">
+					<img class="d-block w-100" src="<%=product.image%> " data-color="violet" alt="Third Image">
 					<div class="carousel-caption d-md-block">
 					</div>
 				  </div>
 				</div>
 				<!-- Controls -->
-				<a class="carousel-control-prev" href="<%=product.images[0].file%>" role="button" data-slide="prev">
+				<a class="carousel-control-prev" href="<%=product.image%>" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="sr-only">Previous</span>
 					</a>
-					  <a class="carousel-control-next" href="<%=product.images[0].file%>" role="button" data-slide="next">
+					  <a class="carousel-control-next" href="<%=product.image%>" role="button" data-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="sr-only">Next</span>
 					</a>
