--- a/Site/views/partials/footer.ejs
+++ b/Site/views/partials/footer.ejs
@@ -13,14 +13,14 @@
           <div class="lists">
             <h2 class="produ">Productos</h2>
             <ul class="list">
-              <li><a href="./"><i class="fa fa-angle-right"></i>Arduinø</a></li>
-              <li><a href="#"><i class="fa fa-angle-right"></i>Modulos</a></li>
-              <li><a href="#"><i class="fa fa-angle-right"></i>Sensores</a></li>
-              <li><a href="#"><i class="fa fa-angle-right"></i>Accesorios</a></li>
-              <li><a href="#"><i class="fa fa-angle-right"></i>Servos</a></li>
-              <li><a href="#"><i class="fa fa-angle-right"></i>Led</a></li>
-             <li><a href="#"><i class="fa fa-angle-right"></i>Motores</a></li>
-              <li><a href="#"><i class="fa fa-angle-right"></i>Componentes</a></li>
+              <li><a href="/products/categories/1"><i class="fa fa-angle-right"></i>Arduinø</a></li>
+              <li><a href="/products/categories/2"><i class="fa fa-angle-right"></i>Modulos</a></li>
+              <li><a href="/products/categories/3"><i class="fa fa-angle-right"></i>Sensores</a></li>
+              <li><a href="/products/categories/4"><i class="fa fa-angle-right"></i>Accesorios</a></li>
+              <li><a href="/products/categories/5"><i class="fa fa-angle-right"></i>Servos</a></li>
+              <li><a href="/products/categories/5"><i class="fa fa-angle-right"></i>Motores</a></li>
+             <li><a href="/products/categories/6"><i class="fa fa-angle-right"></i>Led</a></li>
+              <li><a href="/products/categories/7"><i class="fa fa-angle-right"></i>Componentes</a></li>
             </ul>
           </div>
         </div>
