--- a/Site/views/productDetails.ejs
+++ b/Site/views/productDetails.ejs
@@ -12,7 +12,7 @@
  <br><br>
 
  <div class="container my-4"> 
-    <div class="row">
+    <div class="row my-4">
     <section class="calesita col-md-6">
         <div class="container carousel">
             <div class="row">
@@ -33,31 +33,31 @@
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
-					<img class="d-block w-100" src="<%=product.image%> " data-color="lightblue" alt="First Image">
+					<img class="d-block w-100" src="/images/productos/<%=product.image%> " data-color="lightblue" alt="First Image">
 					<div class="carousel-caption d-md-block">
 					</div>
 				  </div>
-				  <div class="carousel-item">
-					<img class="d-block w-100" src="<%=product.image%> " data-color="firebrick" alt="Second Image">
+				  <!-- <div class="carousel-item">
+					<img class="d-block w-100" src="/images/productos/<%=product.image%> " data-color="firebrick" alt="Second Image">
 					<div class="carousel-caption d-md-block">
 						
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img class="d-block w-100" src="<%=product.image%> " data-color="violet" alt="Third Image">
+					<img class="d-block w-100" src="/images/productos/<%=product.image%> " data-color="violet" alt="Third Image">
 					<div class="carousel-caption d-md-block">
 					</div>
-				  </div>
+				  </div> -->
 				</div>
 				<!-- Controls -->
-				<a class="carousel-control-prev" href="<%=product.image%>" role="button" data-slide="prev">
+				<!-- <a class="carousel-control-prev" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="sr-only">Previous</span>
 					</a>
-					  <a class="carousel-control-next" href="<%=product.image%>" role="button" data-slide="next">
+					  <a class="carousel-control-next" role="button" data-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="sr-only">Next</span>
-					</a>
+					</a> -->
 					</div>
 		
 
@@ -76,7 +76,7 @@
                 <p><%=product.description%> .</p>
                 </div>
             <div class="precios col-6">
-                <h2>$<%= product.price - (product.price / 100 * product.discount) %></h2>
+                <h2>$<%= (product.price - (product.price / 100 * product.discount)).toFixed(2) %></h2>
             </div>
             <div class="centro col-6">
                     <div class="stars">
