--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -4,7 +4,8 @@
 <%- include('partials/head') %>
 
 <body>
-  <header class="header-inicia">
+  <%- include('partials/header') %>
+  <!-- <header class="header-inicia">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="col-12 text-center">
                   <a href="/">
@@ -12,8 +13,9 @@
                 </a>
                 </div>
                 
+                
      </nav>
-</header>
+</header> -->
 
     <section>
         <div class="container inicia">
@@ -23,10 +25,10 @@
                 <div class="register">
                   <h2 class="text1">¡Hola! Para continuar iniciar sesión</h2>
                   <form action="/users/iniciar" method="POST">
-                    <input type="text" placeholder="Correo" class="correo" name="email">
-                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "" %> </span>
+                    <input type="text" placeholder="Correo" class="correo" name="email" "<%= typeof old != 'undefined' && old.email ? old.email.msg : null %>">
+                    <span class="text-danger"><%= typeof errors != "undefined" && errors.email ? errors.email.msg : null %> </span>
                     <input type="password" placeholder="Contraseña" class="password" name="password">
-                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.pass)?errores.pass.msg : "" %> </span>
+                    <span class="text-danger"><%= (typeof errors != 'undefined' && errors.password)?errors.password.msg : null %> </span>
                     <input type="submit" class="submit" value="INICIAR">
                     <div class="form-check d-flex justify-content-center mt-4">
                       <input class="form-check-input" type="checkbox" id="recordar" name="recordar">
@@ -38,10 +40,9 @@
                   </form>
                   <a href="/users/registro" style="color: #30475e;">
                       <h1 class="noLogin">¿Aún no estás registrado?</h1>
-                      <span class="text-danger"><%= (typeof errores != 'undefined' && errores.pass)?errores.pass.msg : "" %> </span>
 
                 </div>
-               <div class="login">
+              <!--  <div class="login">
                   <h2 class="iniciar">Iniciar cuenta con</h2>
                   <div class="login-items">
                     <button class="fb"><i class="fab fa-facebook-f"></i> Acceder con Facebook</button>
@@ -49,6 +50,7 @@
                     <button class="correo"><i class="fab fa-google-plus-g"></i> Acceder con Correo</button> 
                   </div> 
                 </div>
+              /users/perfil -->
               </div>
             </div>
           </div>
