--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -24,17 +24,18 @@
               <div class="login-container">
                 <div class="register">
                   <h2 class="text1">¡Hola! Para continuar iniciar sesión</h2>
-                  <form action="/users/iniciar" method="POST">
-                    <input type="text" placeholder="Correo" class="correo" name="email" "<%= typeof old != 'undefined' && old.email ? old.email.msg : null %>">
-                    <span class="text-danger"><%= typeof errors != "undefined" && errors.email ? errors.email.msg : null %> </span>
-                    <input type="password" placeholder="Contraseña" class="password" name="password">
-                    <span class="text-danger"><%= (typeof errors != 'undefined' && errors.password)?errors.password.msg : null %> </span>
+                  <form action="/users/iniciar" method="POST" id="form-login" class="form-login">
+                    <input type="text" placeholder="Correo" class="correo" name="email"  id="email" "<%= typeof old != 'undefined' && old.email ? old.email.msg : null %>">
+                    <span class="text-danger" id="errorEmail" ><%= typeof errors != "undefined" && errors.email ? errors.email.msg : null %> </span>
+                    <input type="password" placeholder="Contraseña" class="password" name="password" id="password">
+                    <span class="text-danger" id="errorPass"><%= (typeof errors != 'undefined' && errors.password)?errors.password.msg : null %> </span>
                     <input type="submit" class="submit" value="INICIAR">
                     <div class="form-check d-flex justify-content-center mt-4">
                       <input class="form-check-input" type="checkbox" id="recordar" name="recordar">
                       <label class="form-check-label mr-2" for="recordar">
                         Recordarme
                       </label>
+                      <span id="msgError" class="text-danger"></span>
                     </div>
                    
                   </form>
@@ -62,6 +63,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    <script src="/javascripts/iniciar.js"></script>
 </body>
 
 </html>
