--- a/Site/views/registro.ejs
+++ b/Site/views/registro.ejs
@@ -23,34 +23,42 @@
               <div class="login-container">
                 <div class="register">
                   <h2 class="text1">¡Hola! Completá tus datos </h2>
-                  <form action="/users/registro" method="POST" enctype="multipart/form-data">
+                  <form action="/users/registro" method="POST" enctype="multipart/form-data" id="form-reg" class="form-reg">
                       <div>
-                    <input type="text" placeholder="Nombre" class="nombre"  name="name" value="<%= (typeof old != 'undefined' && old.name ? old.name : null) %>">
-                    <span class="text-danger"><%= (typeof errors != 'undefined' && errors.name ? errors.name.msg : null) %> </span>
+                    <input type="text" placeholder="Nombre" class="nombre"  name="name" id="name" value="<%= (typeof old != 'undefined' && old.name ? old.name : null) %>">
+                    <span class="text-danger" id="errorName" ><%= (typeof errors != 'undefined' && errors.name ? errors.name.msg : null) %> </span>
                   </div>
 
                   <div>
-                    <input type="text" placeholder="Apellido" class="apellido" name="lastname" value="<%= (typeof old != 'undefined' && old.lastname ? old.lastname : null) %>">
-                    <span class="text-danger"><%= (typeof errors != 'undefined' && errors.lastname ? errors.lastname.msg : null) %> </span> 
+                    <input type="text" placeholder="Apellido" class="apellido" name="lastname" id="lastname" value="<%= (typeof old != 'undefined' && old.lastname ? old.lastname : null) %>">
+                    <span class="text-danger"  id="errorLastName"><%= (typeof errors != 'undefined' && errors.lastname ? errors.lastname.msg : null) %> </span> 
                 </div>
 
                 <div>
-                    <input type="email" placeholder="Email" class="email" name="email" value="<%= (typeof old != 'undefined' && old.email ? old.email : null) %>">
-                    <span class="text-danger"><%= (typeof errors != 'undefined' && errors.email ? errors.email.msg : null) %> </span>
+                    <input type="email" placeholder="Email" class="email" name="email" id="email" value="<%= (typeof old != 'undefined' && old.email ? old.email : null) %>">
+                    <span class="text-danger" id="errorEmail"><%= (typeof errors != 'undefined' && errors.email ? errors.email.msg : null) %> </span>
       
                 </div>
 
                 <div>
-                    <input type="password" placeholder="Contraseña" class="password" name="password">
-                    <span class="text-danger"><%= (typeof errors != 'undefined' && errors.password ? errors.password.msg : null) %> </span>
+                    <input type="password" placeholder="Contraseña" class="password" name="password"  id="password">
+                    <span class="text-danger" id="errorPassword"><%= (typeof errors != 'undefined' && errors.password ? errors.password.msg : null) %> </span>
                   </div>
 
-                <div>
+                <!-- <div>
                   <p>Imagen de perfil<input type="file" placeholder="selecciona tu foto de perfil" name="avatar" value="<%= (typeof old != 'undefined' && old.email ? old.email : null) %>">
-                    <span class="text-danger"><%= (typeof errors != 'undefined' && errors.email ? errors.email.msg : null) %> </span>
-                </div>
+                    <span class="text-danger"><%= (typeof errors != 'undefined' && errors.avatar ? errors.avatar.msg : null) %> </span>
+                </div> -->
+                  <div class="terminosRegister d-flex justify-content-center mt-4">
+                      <input type="checkbox" class="form-check-input mr-2" name="bases" id="bases">
+                      <label class="form-check-label mr-4" for="bases">Acepto bases y condiciones.</label><br>
+                      <span id="msgBases" class="text-danger"></span>
+                  </div>
                     
                     <input type="submit" class="submit" value="REGISTRARME">
+                    <div class="col-12">
+                      <span id="msgError" class="text-danger"></span>
+                  </div>
                   </form>
                   <a href="/users/iniciar" style="color: #30475e;">
                       <h1 class="noLogin">¿Estás registrado? <a href="/iniciar"></a>Inicia sesión</h1>
@@ -75,6 +83,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    <script src="/javascripts/registro.js"></script>
 </body>
 
 </html>
