Front Cart, Controller and new db

--- a/Site/views/partials/header.ejs
+++ b/Site/views/partials/header.ejs
@@ -36,7 +36,9 @@
 
         <a href="/cart">
           <button class="btn btn-outline-light">
-            Carrito <i class="fas fa-cart-plus"></i></button></a>
+            Carrito <i class="fas fa-cart-plus"></i>
+            <span class="badge rounded-pill bg-warning"></span>
+          </button></a>
         
             <% if (typeof user != 'undefined') { %>
               <a href="/users/logout">
