--- a/Site/views/cart.ejs
+++ b/Site/views/cart.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <%- include('partials/head') %>
@@ -7,150 +7,50 @@
 
 </head>
 
-<body class="cart-body">
-
-    <header class="cart-header">
-        
-        <%- include('partials/header') %>
-
-    </header>
-
-    <div class="container">
-        <div class="panel">
-            <div class="panel-primario">
-                <h2 style="text-align:center;" class="titulo">Mi Carrito</h2>
-            </div>
-            <table class="table table-hover" id="dev-table">
-                <thead>
-                    <tr>
-                        <th>Nombre</th>
-                        <th>imagen</th>
-                        <th>precio</th>
-                      <!--   <th class="desc">descripcion</th> -->
-                        <th>Eliminar</th>
-
-                    </tr>
+<body class="cart-body">       
+    <%- include('partials/header') %>
+  <aside>
+      <div class="modal-dialog">
+        <div class="modal-content" id="miCarrito">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Carrito</h5>
+          </div>
+          <div class="modal-body" id="lista-carrito">
+            <div class="table-responsive">
+              <table class="table">
+                <thead id="cart-head">
+                  <tr>
+                    <th colspan="3">Producto</th>
+                    <th scope="col">Precio</th>
+                    <th scope="col">SubTotal</th>
+                  </tr>
                 </thead>
-
-                <tr>
-                    <td> Intelligent Metal Chips </td>
-                    <td> <img src="https://www.cromptonlamps.com/imagecache/dd325c1c-f550-42ff-ae1a-a87a00ed8e8b/3415---LED-G9-25W-2700K_1000x1000.jpg" alt="Product Pic" height="40px" width="40px" /></td>
-                    <td>$ 99.00</td>
-                  <!--   <td>display led de 2.5w</td> -->
-
-                    <td><a class="btn btn-danger btn-xs" href="#"><i class="fas fa-trash-alt"></i><span
-                                class="glyphicon glyphicon-trash"></span></a></td>
-
-                </tr>
-
-                <tr>
-                    <td> Led COB </td>
-                    <td> <img src="https://http2.mlstatic.com/D_NQ_NP_713360-MLA31050388703_062019-O.webp" alt="Product Pic" height="40px" width="40px" /></td>
-                    <td>$ 20.00</td>
-                  <!--   <td>led COB de 50w</td> -->
-
-                    <td><a class="btn btn-danger btn-xs" href="#"><i class="fas fa-trash-alt"></i><span
-                                class="glyphicon glyphicon-trash"></span></a></td>
-
-                </tr>
-
-                <br><br><br>
-                <h1>Tus productos</h1>
-
-            </table>
-        </div>
-    </div>
-
-
-
-    
-            <div class="botones-nav col-12">
-                    <a href="#">
-                      <button class="btn btn-primary">Agregar a Guardados</button></a> 
-                     <a href="/users/registro">
-                      <button class="btn btn-success btn-block" id="procesar-compra">COMPRAR
-                        AHORA</button></a> 
-                </div>
+                  <tbody>
+                    <span id="cart-empty" class="text-danger">El carrito no tiene productos agregados</span>
+                  </tbody>
+                  <tfoot id="cart-footer">
+                    <tr>
+                      <th colspan="4"  class="text-end" id="totaltitle">TOTAL:</th>
+                      <th >
+                        <h5 id="total"></h5>
+                      </th>
+                    </tr>
+                  </tfoot>
+                </table>
             </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-sm btn-danger" id="btn-delete-cart">Vaciar carrito</button>
+            <button type="button" class="btn btn-sm btn-success" data-bs-dismiss="modal">Seguir comprando</button>
+            <button type="button" class="btn btn-sm btn-primary" id="btn-next-buy">Finalizar compra</button>
+          </div>
         </div>
-        
-      <!--   <div class="row boton2">
-            <div class="col-12 col-md-6 col-lg-3">
-                
-            </div>
-        </div> -->
+      </div>
     </div>
-
-   
-
+  </aside>
 
 
-
-            <section class="container">
-                <div class="row productos">
-                  <div class="col-12">
-                    <h2>PENSADO PARA VOS</h2>
-                  </div>
-                  <div class="col-12 col-md-6 col-lg-3">
-                    <div class="contenido">
-                        <div>
-                            <img src="/images/productos/ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328.jpg" alt="">
-                        </div>
-                     
-                      <div class="datos">
-                        <h3>$500,97</h3>
-                        <p>ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328</p>
-                        <i class="fas fa-truck"></i>
-                      </div>
-                    </div>
-                  </div>
     
-                  <div class="col-12 col-md-6 col-lg-3">
-                    <div class="contenido">
-                        <div>
-                            <img src="/images/productos/ARDUINO NANO V3.0 ATMEGA328 COMPATIBLE USB CON CH340.jpg" alt="">
-                        </div>
-                     
-                      <div class="datos">
-                        <h3>$130,97</h3>
-                        <p>ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328</p>
-                        <i class="fas fa-truck"></i>
-                      </div>
-                    </div>
-                  </div>
-    
-                  <div class="col-12 col-md-6 col-lg-3">
-                    <div class="contenido">
-                        <div>
-                            <img src="/images/productos/FUENTE STEP DOWN DC DC LM2596 1.25V 35V 3A ARDUINO.jpg" alt="">
-                        </div>
-                     
-                      <div class="datos">
-                        <h3>$210,40</h3>
-                        <span>30% OFF</span>
-                        <p>FUENTE STEP DOWN DC DC LM2596 1.25V 35V 3A ARDUINO</p>
-                        <i class="fas fa-truck"></i>
-                      </div>
-                    </div>
-                  </div>
-
-
-                  <div class="col-12 col-md-6 col-lg-3">
-                    <div class="contenido">
-                        <div>
-                            <img src="/images/productos/SENSOR ULTRASONIDO HC-SR04 DISTANCIA ARDUINO ROBOTICA.jpg" alt="">
-                        </div>
-                     
-                      <div class="datos">
-                        <h3>250,68</h3>
-                        <span>20% OFF</span>
-                        <p>SENSOR ULTRASONIDO HC-SR04 DISTANCIA ARDUINO ROBOTICA</p>
-                        <i class="fas fa-truck"></i>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </section>
 
                        
 
@@ -168,10 +68,10 @@
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
 
-
+        <script defer src="/javascripts/cart.js"></script>
        
 
 
-    </body>
+  </body>
 
 </html>
