--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -75,6 +75,8 @@
 								<p><%= product.name %> </p>
 								<i class="fas fa-truck"></i>
 							</div>
+							<a href="#" class="btn-add-cart h3" onclick="agregarItem(event,'<%=product.id%>')"><i
+								class="fas fa-cart-plus"></i></a>
 							</div>
 						</a>
 				  </div>
@@ -105,6 +107,8 @@
 										<p><%=product.name%> </p>
 										<i class="fas fa-truck"></i>
 									</div>
+									<a href="#" class="btn-add-cart h3" onclick="agregarItem(event,'<%=product.id%>')"><i
+										class="fas fa-cart-plus"></i></a>
 									</div>
 								</a>
 						  </div>
@@ -171,7 +175,8 @@
 
 
 	  <%- include('partials/footer') %>
+	  <script defer src="/javascripts/cart.js"></script>
 
 	</body>
 
-</html>
+</html>	
