--- a/Site/views/productDetails.ejs
+++ b/Site/views/productDetails.ejs
@@ -37,27 +37,7 @@
 					<div class="carousel-caption d-md-block">
 					</div>
 				  </div>
-				  <!-- <div class="carousel-item">
-					<img class="d-block w-100" src="/images/productos/<%=product.image%> " data-color="firebrick" alt="Second Image">
-					<div class="carousel-caption d-md-block">
-						
-					</div>
-				  </div>
-				  <div class="carousel-item">
-					<img class="d-block w-100" src="/images/productos/<%=product.image%> " data-color="violet" alt="Third Image">
-					<div class="carousel-caption d-md-block">
-					</div>
-				  </div> -->
 				</div>
-				<!-- Controls -->
-				<!-- <a class="carousel-control-prev" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-					</a>
-					  <a class="carousel-control-next" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-					</a> -->
 					</div>
 		
 
@@ -98,7 +78,7 @@
         
         <div class="d-grid gap-2">
             <button class="btn btn-primary" type="button"><i class="fas fa-shopping-bag"></i>COMPRAR AHORA</button>
-            <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i>AGREGAR AL
+            <button class="btn btn-primary" type="button" onclick="agregarItem(event,'<%=product.id%>')"><i class="fas fa-shopping-cart"></i>AGREGAR AL
                 CARRITO</button>
         </div>
     </section>
@@ -126,7 +106,8 @@
             integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
             crossorigin="anonymous"></script>
 
-            <%- include('partials/footer')%>    
-</body>
+            <%- include('partials/footer')%>   
+            <script defer src="/javascripts/cart.js"></script>
+        </body>
 
 </html>
